added firebase connectivity and made some basic UI

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+google-services.json
+
 # OSX
 #
 .DS_Store
@@ -21,7 +23,6 @@ DerivedData
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
-
 # Android/IntelliJ
 #
 build/
