--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-date-picker": "^5.0.8",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0"
   },
